[Issue #2792] Add schemas for extract metadata list API (#2900)
## Summary
Fixes #2792 

### Time to review: 10 mins

## Changes proposed
Add request/response schemas for ExtractMetadata listing API

## Context for reviewers
Creates the input/output schemas needed by the API to support querying
extracts and returning data.

## Additional information
See unit tests
